--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,7 @@
 @import "reset.css";
+.ptseriffont {
+  font-family: 'PT Serif', serif;
+}
 body {
   font-family: 'Raleway', sans-serif;
   background-color: #fff9e7;
@@ -31,6 +34,25 @@ body .container {
 .header_top .inner_header .main_navigation {
   flex-grow: 2;
 }
+.header_top .inner_header .header_cart {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
+  color: #ffffff;
+}
+.header_top .inner_header .header_cart i {
+  color: #ffea00;
+}
+.header_top .inner_header .header_cart .ptseriffont {
+  font-style: italic;
+  text-decoration: underline;
+  color: #ffea00;
+}
+.header_top .inner_header .header_cart .cart_counter {
+  border-right: 1px dotted rgba(255, 255, 255, 0.5);
+  padding-left: 5px;
+  padding-right: 10px;
+  margin-right: 10px;
+}
 .header_top .inner_header nav {
   font-family: 'Quicksand', sans-serif;
   font-weight: 700;
@@ -44,6 +66,46 @@ body .container {
   display: inline-block;
   font-size: 13px;
   margin: 0 17px;
+  border-top: 3px solid transparent;
+  position: relative;
+}
+.header_top .inner_header nav ul li ul.sub-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: #ffffff;
+  box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.07);
+}
+.header_top .inner_header nav ul li ul.sub-menu::before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 6px 7px 6px;
+  border-color: transparent transparent #ffffff transparent;
+  position: absolute;
+  top: -7px;
+  left: 34px;
+}
+.header_top .inner_header nav ul li ul.sub-menu li {
+  margin: 0 25px;
+}
+.header_top .inner_header nav ul li ul.sub-menu li:hover {
+  border-top: 3px solid transparent;
+}
+.header_top .inner_header nav ul li ul.sub-menu li:hover a {
+  color: #ff742b;
+}
+.header_top .inner_header nav ul li ul.sub-menu a {
+  color: #7b7a79;
+}
+.header_top .inner_header nav ul li:hover {
+  color: #ffea00;
+  border-top: 3px solid #ffea00;
+}
+.header_top .inner_header nav ul li:hover a {
+  color: #ffea00;
 }
 .header_top .inner_header nav ul li a {
   color: #ffffff;
